--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -13,6 +13,7 @@
     "heading_font_family": "merriweather_heading",
     "subheading_font_family": "merriweather_subheading",
     "body_font_family": "merriweather_body",
+    "menu_font_family": "merriweather_body",
     "sections": {
       "header": {
         "type": "header",
