adding options for button settings

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -9,12 +9,17 @@
  */
 {
   "current": {
-    "color_primary_orange": "#3164ce",
-    "color_light_orange": "#3164ce",
+    "color_primary_orange": "#3577ff",
     "heading_font_family": "merriweather_heading",
     "subheading_font_family": "merriweather_subheading",
     "body_font_family": "merriweather_body",
     "menu_font_family": "merriweather_body",
+    "button_background_color": "#FF6B35",
+    "button_text_color": "#FFFFFF",
+    "button_border_color": "#FF6B35",
+    "button_hover_background_color": "#FF8C61",
+    "button_hover_text_color": "#FFFFFF",
+    "button_hover_border_color": "#FF8C61",
     "sections": {
       "header": {
         "type": "header",
@@ -26,13 +31,13 @@
           "logo_width": 200,
           "logo_max_height": 60,
           "logo_font_size": 30,
-          "logo_color": "#3164ce",
+          "logo_color": "#ff6b35",
           "show_book_now_button": true,
           "book_now_button_text": "Book Now",
           "book_now_button_url": "shopify://pages/contact",
-          "book_now_button_bg_color": "#3164ce",
+          "book_now_button_bg_color": "#ff6b35",
           "book_now_button_text_color": "#ffffff",
-          "book_now_button_hover_bg_color": "#3164ce",
+          "book_now_button_hover_bg_color": "#ff8c61",
           "book_now_button_hover_text_color": "#ffffff",
           "book_now_button_font_size": 16,
           "book_now_button_font_weight": "600",
@@ -45,10 +50,10 @@
           "menu_font_size": 20,
           "menu_font_weight": "400",
           "menu_link_spacing": 12,
-          "menu_link_color": "#3164ce",
-          "menu_link_hover_color": "#3164ce",
-          "dropdown_bg_color": "#3164ce",
-          "dropdown_link_color": "#3164ce",
+          "menu_link_color": "#ff6b35",
+          "menu_link_hover_color": "#ff8c61",
+          "dropdown_bg_color": "#ff6b35",
+          "dropdown_link_color": "#333333",
           "dropdown_hover_bg_color": "#fff8e7",
           "dropdown_hover_color": "#ff6b35",
           "header_bg_color": "#ffffff",
@@ -71,8 +76,8 @@
           "header_padding_bottom": 5,
           "header_margin_top": 0,
           "header_margin_bottom": 0,
-          "show_search": false,
-          "show_cart": false,
+          "show_search": true,
+          "show_cart": true,
           "icon_size": 20,
           "show_mobile_menu": true,
           "mobile_menu_icon_color": "#ff6b35",
@@ -141,7 +146,7 @@
         "settings": {
           "footer_text": "Follow us on instagram!",
           "instagram_url": "https://www.instagram.com/thehypeclubofficial?igsh=MTZsamp5eDN2MmVtdg%3D%3D&utm_source=qr",
-          "footer_bg_color": "#ffffff",
+          "footer_bg_color": "#FFFFFF",
           "footer_text_color": "#ff6b35",
           "footer_font_family": "serif",
           "footer_font_size": 18,
@@ -150,15 +155,6 @@
         }
       }
     },
-    "content_for_index": [],
-    "blocks": {
-      "6455419830187867978": {
-        "type": "shopify://apps/sesami-booking-app/blocks/app-embed/dc3b1344-0a53-477e-93d0-4b8a473ab587",
-        "disabled": false,
-        "settings": {
-          "enable_cart_verification": true
-        }
-      }
-    }
+    "content_for_index": []
   }
 }
