--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -17,9 +17,13 @@
     "button_background_color": "#FF6B35",
     "button_text_color": "#FFFFFF",
     "button_border_color": "#FF6B35",
+    "button_border_style": "solid",
+    "button_border_width": 1,
     "button_hover_background_color": "#FF8C61",
     "button_hover_text_color": "#FFFFFF",
     "button_hover_border_color": "#FF8C61",
+    "button_hover_border_style": "solid",
+    "button_hover_border_width": 1,
     "sections": {
       "header": {
         "type": "header",
