--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -14,6 +14,15 @@
     "subheading_font_family": "merriweather_subheading",
     "body_font_family": "merriweather_body",
     "menu_font_family": "merriweather_body",
+    "menu_link_color": "#8B6F47",
+    "menu_link_hover_color": "#FF6B35",
+    "menu_font_size": 16,
+    "menu_font_weight": "500",
+    "menu_link_spacing": 8,
+    "dropdown_bg_color": "#FFFFFF",
+    "dropdown_link_color": "#333333",
+    "dropdown_hover_bg_color": "#FFF8E7",
+    "dropdown_hover_color": "#FF6B35",
     "button_background_color": "#3577ff",
     "button_text_color": "#FFFFFF",
     "button_border_color": "#3577ff",
