--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -14,15 +14,17 @@
     "subheading_font_family": "merriweather_subheading",
     "body_font_family": "merriweather_body",
     "menu_font_family": "merriweather_body",
-    "menu_link_color": "#8B6F47",
-    "menu_link_hover_color": "#FF6B35",
-    "menu_font_size": 16,
-    "menu_font_weight": "500",
-    "menu_link_spacing": 8,
+    "menu_link_color": "#ffffff",
+    "menu_link_hover_color": "#3577ff",
+    "menu_font_size": 20,
+    "menu_font_weight": "600",
+    "menu_link_spacing": 10,
+    "menu_text_decoration": "none",
+    "menu_text_transform": "none",
     "dropdown_bg_color": "#FFFFFF",
     "dropdown_link_color": "#333333",
     "dropdown_hover_bg_color": "#FFF8E7",
-    "dropdown_hover_color": "#FF6B35",
+    "dropdown_hover_color": "#3577ff",
     "button_background_color": "#3577ff",
     "button_text_color": "#FFFFFF",
     "button_border_color": "#3577ff",
@@ -33,6 +35,8 @@
     "button_hover_border_color": "#FF8C61",
     "button_hover_border_style": "solid",
     "button_hover_border_width": 1,
+    "menu_text_decoration": "none",
+    "menu_text_transform": "none",
     "sections": {
       "header": {
         "type": "header",
@@ -55,9 +59,6 @@
           "book_now_button_margin_left": 15,
           "menu": "main-menu",
           "menu_alignment": "right",
-          "menu_font_size": 20,
-          "menu_font_weight": "400",
-          "menu_link_spacing": 12,
           "header_shadow": true,
           "scrolled_padding_top": 12,
           "scrolled_padding_bottom": 12,
@@ -76,8 +77,8 @@
           "header_padding_bottom": 5,
           "header_margin_top": 0,
           "header_margin_bottom": 0,
-          "show_search": true,
-          "show_cart": true,
+          "show_search": false,
+          "show_cart": false,
           "icon_size": 20,
           "show_mobile_menu": true,
           "mobile_menu_icon_size": 24,
@@ -106,13 +107,7 @@
           "title_font_size": 40,
           "title_position_top": 20,
           "text_alignment": "center",
-          "button_text_color": "#ffffff",
-          "button_bg_color": "#ff6b35",
-          "button_opacity": 70,
           "button_position_bottom": 5,
-          "button_font_size": 16,
-          "button_padding_horizontal": 32,
-          "button_padding_vertical": 14,
           "overlay_color": "#000000",
           "overlay_opacity": 25,
           "padding_top": 110,
