Refactor: Update list-collections-section to use Bootstrap 5 cards

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -13,26 +13,24 @@
     "heading_font_family": "merriweather_heading",
     "subheading_font_family": "merriweather_subheading",
     "body_font_family": "merriweather_body",
-    "menu_link_color": "#3577ff",
-    "menu_link_hover_color": "#3577ff",
     "menu_font_family": "merriweather_body",
-    "menu_text_decoration": "none",
-    "menu_text_transform": "none",
-    "menu_font_size": 20,
-    "menu_font_weight": "600",
-    "menu_link_spacing": 10,
+    "menu_link_color": "#8B6F47",
+    "menu_link_hover_color": "#FF6B35",
+    "menu_font_size": 16,
+    "menu_font_weight": "500",
+    "menu_link_spacing": 8,
     "dropdown_bg_color": "#FFFFFF",
     "dropdown_link_color": "#333333",
     "dropdown_hover_bg_color": "#FFF8E7",
-    "dropdown_hover_color": "#3577ff",
+    "dropdown_hover_color": "#FF6B35",
     "button_background_color": "#3577ff",
-    "button_text_color": "#ffffff",
+    "button_text_color": "#FFFFFF",
     "button_border_color": "#3577ff",
     "button_border_style": "solid",
-    "button_border_width": 2,
+    "button_border_width": 1,
     "button_hover_background_color": "#FF8C61",
-    "button_hover_text_color": "#3577ff",
-    "button_hover_border_color": "#3577ff",
+    "button_hover_text_color": "#FFFFFF",
+    "button_hover_border_color": "#FF8C61",
     "button_hover_border_style": "solid",
     "button_hover_border_width": 1,
     "sections": {
@@ -48,7 +46,7 @@
           "logo_font_size": 30,
           "show_book_now_button": true,
           "book_now_button_text": "Book Now",
-          "book_now_button_url": "shopify://collections/booking-services",
+          "book_now_button_url": "shopify://pages/contact",
           "book_now_button_font_size": 16,
           "book_now_button_font_weight": "600",
           "book_now_button_padding_x": 20,
@@ -57,6 +55,9 @@
           "book_now_button_margin_left": 15,
           "menu": "main-menu",
           "menu_alignment": "right",
+          "menu_font_size": 20,
+          "menu_font_weight": "400",
+          "menu_link_spacing": 12,
           "header_shadow": true,
           "scrolled_padding_top": 12,
           "scrolled_padding_bottom": 12,
@@ -75,8 +76,8 @@
           "header_padding_bottom": 5,
           "header_margin_top": 0,
           "header_margin_bottom": 0,
-          "show_search": false,
-          "show_cart": false,
+          "show_search": true,
+          "show_cart": true,
           "icon_size": 20,
           "show_mobile_menu": true,
           "mobile_menu_icon_size": 24,
@@ -105,7 +106,13 @@
           "title_font_size": 40,
           "title_position_top": 20,
           "text_alignment": "center",
+          "button_text_color": "#ffffff",
+          "button_bg_color": "#ff6b35",
+          "button_opacity": 70,
           "button_position_bottom": 5,
+          "button_font_size": 16,
+          "button_padding_horizontal": 32,
+          "button_padding_vertical": 14,
           "overlay_color": "#000000",
           "overlay_opacity": 25,
           "padding_top": 110,
